# robot-arms-alex

./: .gitignore  cleaner.py  dataAverager.py  dataProcessor.py  dataProcessor2.py  getRectJointAngle  getRectJointAngle.cpp  getXAvgJointAngles.cpp  playback_joint_states.cpp  wristAngleAvg.csv
Processed X-Data/XElbow/: processedXElbow1.csv  processedXElbow11.csv  processedXElbow13.csv  processedXElbow14.csv  processedXElbow16.csv  processedXElbow19.csv  processedXElbow2.csv  processedXElbow20.csv  processedXElbow3.csv  processedXElbow4.csv  processedXElbow5.csv  processedXElbow6.csv  processedXElbow7.csv
Processed X-Data/XShoulder/: processedXShoulder14.csv  processedXShoulder3.csv  processedXShoulder6.csv  processedXShoulder9.csv
Processed X-Data/XWaist/: processedXWaist11.csv  processedXWaist13.csv  processedXWaist14.csv  processedXWaist16.csv  processedXWaist18.csv  processedXWaist20.csv  processedXWaist5.csv  processedXWaist7.csv
Processed X-Data/XWristAngle/: processedXWristAngle11.csv  processedXWristAngle12.csv  processedXWristAngle14.csv  (+5 more)
Raw X-Data/: JointStates10.csv  JointStates12.csv  JointStates13.csv  JointStates14.csv  JointStates16.csv  JointStates17.csv  JointStates19.csv  JointStates3.csv  JointStates4.csv  JointStates5.csv  JointStates6.csv  JointStates7.csv  JointStates8.csv  JointStates9.csv
X-Data/: JointStates1.csv  JointStates10.csv  JointStates11.csv  JointStates13.csv  JointStates15.csv  JointStates18.csv  JointStates2.csv  JointStates20.csv  JointStates4.csv  JointStates5.csv  JointStates6.csv  JointStates7.csv  JointStates8.csv  JointStates9.csv
elbow/: graphData.py  processedElbow1.csv  processedElbow10.csv  processedElbow2.csv  processedElbow3.csv  processedElbow4.csv  processedElbow5.csv  processedElbow6.csv  processedElbow8.csv
robotest/: CMakeLists.txt  compile_commands.json  drawAvgRect.cpp  drawAvgX.cpp  package.xml  playback_joint_states.cpp  record_joint_states.cpp  replayX.cpp
robotest/launch files/: drawAvgRect.launch  drawAvgX.launch  replayX.launch
shoulder/: processedShoulder1.csv  processedShoulder10.csv  processedShoulder2.csv  processedShoulder3.csv  processedShoulder4.csv  processedShoulder5.csv  processedShoulder6.csv  processedShoulder7.csv  processedShoulder8.csv
waist/: processedWaist1.csv  processedWaist2.csv  processedWaist3.csv  processedWaist4.csv  processedWaist5.csv
wristangle/: graphData.py  processedWristAngle1.csv  processedWristAngle2.csv  processedWristAngle3.csv  processedWristAngle4.csv  processedWristAngle5.csv  processedWristAngle6.csv  processedWristAngle7.csv  processedWristAngle9.csv
(+78 files in other folders)
